# sinarsolusi

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  wrangler.toml
apps/news_scraper/: .dockerignore  .editorconfig  .env.example  Dockerfile  README.md  compose.dev.yaml  compose.env.example  compose.yaml  pyproject.toml  sites.example.json
apps/news_scraper/scripts/: build_image.sh
apps/news_scraper/src/: admin_ui.py  config.py  extract_news.py  group_news.py  links.py  models.py  paths.py  post_news.py  pre_commit.py  scrape.py  scraper.py  seed.py  site_configs.py  site_loader.py  testcall.py
apps/news_scraper/src/llm_api_client/: google.py  schema.py
apps/news_scraper/src/news_admin/: __init__.py  celery_app.py  manage.py
apps/news_scraper/src/news_admin/apps/articles/: admin.py  apps.py  models.py  services.py
apps/news_scraper/src/news_admin/apps/articles/migrations/: 0001_initial.py  0002_articleimportrun.py  0003_article_updated_at.py  0004_article_metadata.py
apps/news_scraper/src/news_admin/apps/dashboard/: apps.py  forms.py  services.py  urls.py  views.py
apps/news_scraper/src/news_admin/apps/jobs/: admin.py  api_urls.py  api_views.py  apps.py  models.py  services.py  tasks.py
apps/news_scraper/src/news_admin/apps/sources/: admin.py  apps.py  models.py  policy.py  signals.py
apps/news_scraper/src/news_admin/config/: asgi.py  settings.py  urls.py  wsgi.py
apps/news_scraper/src/news_scraper_core/: config.py  extract_news.py  links.py  models.py  post_news.py  scrape.py  seed.py  site_loader.py
apps/news_scraper/src/news_scraper_core/llm_api_client/: __init__.py  base.py  google.py
apps/news_scraper/src/news_scraper_core/sites/: __init__.py  base.py  beritasatu_com.py  detik_com.py  kompas_com.py
apps/news_scraper/src/news_scraper_core/store/: __init__.py  base.py  db.py  schema.postgres.sql  schema.sqlite.sql
apps/news_scraper/src/news_scraper_core/summarizer/: __init__.py  base.py  schema.py  text.py
apps/news_scraper/src/news_scraper_core/utils/: __init__.py  logging.py  url.py
apps/news_scraper/src/sites/: base.py  beritasatu_com.py  kompas_com.py
apps/news_scraper/src/store/: factory.py
apps/news_scraper/src/summarizer/: __init__.py  json_summarizer.py
apps/news_scraper/src/utils/: __init__.py  logging.py  url.py
apps/news_scraper/tests/: test_admin_ui.py  test_article_admin_filters.py  test_articles_services.py  test_config.py  test_dashboard.py  test_dashboard_api.py  test_group_news.py  test_links.py  test_links_meta.py  test_logging.py  test_pipeline_meta.py  test_post_news.py  test_pre_commit.py  test_refresh_jobs.py  test_scrape.py  test_site.py  test_sources_admin.py  test_store_db.py  test_summarizer.py  test_url.py
deploy/: README.md
(+100 files in other folders)
