[project]
name = "news-scraper"
version = "0.1.0"
description = "Modular workspace for web and news scraping"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["nscraper==0.1.4"]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=5.0"]
lint = ["ruff>=0.11"]

[project.scripts]
seed = "src.seed:main"
extract-news = "src.extract_news:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=49"

[tool.hatch.build.targets.wheel]
packages = ["src"]
