[project]
name = "news-scraper"
version = "0.1.0"
description = "Modular workspace for web and news scraping"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.4",
    "django-celery-beat>=2.8",
    "django>=5.1",
    "gunicorn>=23.0",
    "google-genai>=0.8.0",
    "nscraper==0.1.4",
    "pydantic>=2.0",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "djangorestframework>=3.15",
    "scikit-learn>=1.5",
    "whitenoise>=6.9",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=5.0"]
lint = ["ruff>=0.11"]

[project.scripts]
seed = "news_scraper_core.seed:main"
seed-ui = "src.admin_ui:main"
extract-news = "news_scraper_core.extract_news:main"
scrape = "news_scraper_core.scrape:main"
post-news = "news_scraper_core.post_news:main"
summarize = "news_scraper_core.summarizer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
addopts = "--cov-fail-under=49"

[tool.hatch.build.targets.wheel]
packages = ["src"]
